...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/omr_answer_key_list_action_back" />

        <Button
            android:id="@+id/buttonOmrAnswerKeyListCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/omr_answer_key_list_action_create" />
...
